2007-11-02  Stefan Harmeling  <harmeling@gmail.com>

	* prules.c (resolve_freefix_prule2): changed assertion to check,
	since with 'f(x) if 17' it can happen that the next prule to apply
	is 'if' but it is not the first in the parsetree.
	(colon_pr): changed the output of 'colon_pr', the easiest to learn
	about it is to type:

	\:
	\:42
	\10:
	\10:42

	at the prompt.

	* prelude.rha (iterable.check): simplified the check to only look
	for 'iter' slot, since for slices we can only call 'iter' if we
	provide a bound.

	(tuple.proto.extend): now lists and slices are allowed to
	manipulate tuples:

	t = tuple(10);
	t(list[1,2,3,4]) = 17;
	t(0:2:) = 42;
	t(6:-2:) = 77;        // puts automatically -1 as lower bound
	t
	(77 17 77 17 77 <void> 77 <void> 42 <void>)

2007-10-31  Stefan Harmeling  <harmeling@gmail.com>

	* prelude.rha: now we can do stuff like:

	t = tuple(10);
	t(0:5) = 17;
	t(6:10) = 6:10;

	Almost, some little bugs remain.

	* core.c (for_fn): minor adjustments to allow

	for ([x,y] in zip(0:5, 5:10))
	   print(x+y);

	* prules.c (resolve_assign_prule): now also multiple values can be
	assigned:

	// MOST BASIC ASSIGNMENTS:
	// x = 0            (assign_fn local \x 0)
	// a.x = 0          (assign_fn a     \x 0)
	// a(z).x = 0       (assign_fn (a z) \x 0)

	// ASSIGNMENTS THAT OVERLOAD FUNCTIONS:
	// f(x) = 0         (extend local \f \(x) local 0)
	// a.f(x) = 0       (extend a     \f \(x) local 0)
	// a(z).f(x) = 0    (extend (a z) \f \(x) local 0)

	// ASSIGNMENTS WITH LIST LITERALS ON THE LHS:
	// [x, y] = alist       (assign_fn local (\x \y) alist)
	// a.[x, y] = alist     (assign_fn a     (\x \y) alist)
	// a(z).[x, y] = alist  (assign_fn (a z) (\x \y) alist)
	// only flat lists of symbols are allowed on LHS and the RHS must be iterable


	* object.[ch]: added 'assign_fn' which calls:

	    assign         for symbols, e.g. x = 17
	    assign_many    for tuples of symbols, e.g. [x, y] = [17, 42]

	* prelude.rha: added 'zip'

	rha[0](-1)$ zip(0:5, 5:10)